# nonebot-plugin-acgnshow

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_acgnshow/: __init__.py  acgnapis.py  acgnshower.py  config.py  models.py  typing.py  util.py
nonebot_plugin_acgnshow/res/: details.html  template.html
nonebot_plugin_acgnshow/res/css/: detail.css  style.css
