[project]
name = "nonebot-plugin-acgnshow"
dynamic = ["version"]
description = "Nonebot2插件，从哔哩哔哩会员购获取简易展览数据"
readme = "README.md"
requires-python = "<4.0,>=3.9"
authors = [{ name = "Asankilp", email = "asankilp@outlook.com" }]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-plugin-alconna>=0.48.0",
    "nonebot-plugin-htmlrender>=0.3.2",
    "jinja2>=3.1.4",
    "aiohttp>=3.9"
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/LiteyukiStudio/nonebot-plugin-acgnshow"


[tool.nonebot]
plugins = ["nonebot_plugin_acgnshow"]
adapters = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
tag_filter = "v*"
tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'
fallback_version = "0.1.0"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff.lint]
ignore = ["E402"]